--- a/nav.html
+++ b/nav.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Document</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../integration-mobile/CSS/nav.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
-        <img src="Cross.png" width="10%" height="10%">
+        <img src="../integration-mobile/Images/Cross.png" width="10%" height="10%">
         <div class="nav">
             <div class="home"><h3>Home</h3></div>
             <div class="projecten"><h3>Projecten</h3></div>
@@ -23,7 +23,6 @@
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-instagram"></a>
         </div>
-        <div>test</div>
 
 
 
