--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
     <body>
         <img src="../integration-mobile/Images/Cross.png" width="10%" height="10%">
         <div class="nav">
-            <div class="home"><a href="index.html"><h3>Home</h3><a/></div>
+            <div class="home"><a href="index.html"><h3>Home</h3></a></div>
             <div class="projecten"><h3>Projecten</h3></div>
             <div class="connect"><h3>Connect</h3></div>
             <div class="contact"><h3>Contact</h3></div>
