--- a/scanner.html
+++ b/scanner.html
@@ -13,6 +13,7 @@
         <div>
             <span id="cam-has-camera"></span>
             <br>
+            <img src="Images/qr-scanner.png" alt="qr-scanner" id="scanner">
             <video muted playsinline id="qr-video"></video>
         </div>
 
