--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <h2>Contact</h2>
     <p class="mail"><a href="mailto:info@ehb.be">info@ehb.be</a> <br> 02 523 37 37</p>
 
-    <div class="formulier">
+    <div class="formulier">ded
         <form>
             <h4>Voornaam</h4>
             <input type="text" id="fname" name="firstname" placeholder="Voornaam">
