--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="CSS/contact.css" />
+    <link rel="stylesheet" type="text/css" href="../integration-mobile/CSS/contact.css" />
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 </head>
 
@@ -15,7 +15,7 @@
     <h2>Contact</h2>
     <p class="mail"><a href="mailto:info@ehb.be">info@ehb.be</a> <br> 02 523 37 37</p>
 
-    <div class="formulier">ded
+    <div class="formulier">
         <form>
             <h4>Voornaam</h4>
             <input type="text" id="fname" name="firstname" placeholder="Voornaam">
