--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
@@ -32,9 +33,15 @@
     <h2>Waar</h2>
     <h3>Zinnema</h3>
     <p>Rue de Veeweyde 24 <br> 1070 Anderlecht</p>
-    
+
     <div class="kaart">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.831352654523!2d4.304913015887837!3d50.83428766751352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c41dd7e13f2d%3A0x622bf72642175cf9!2sZINNEMA+Open+Talentenhuis+in+Brussel!5e0!3m2!1snl!2sbe!4v1558080544580!5m2!1snl!2sbe" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.831352654523!2d4.304913015887837!3d50.83428766751352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c41dd7e13f2d%3A0x622bf72642175cf9!2sZINNEMA+Open+Talentenhuis+in+Brussel!5e0!3m2!1snl!2sbe!4v1558080544580!5m2!1snl!2sbe" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div class="social">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+    </div>
 </body>
+
 </html>
