--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Final Show</title>
-    <link rel="stylesheet" type="text/css" href="../integration-mobile/CSS/Index.css" />
+    <link rel="stylesheet" type="text/css" href="/CSS/Index.css" />
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 
 </head>
