--- a/scanner.html
+++ b/scanner.html
@@ -7,12 +7,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="module" src="js/scanner.js"></script>
     </head>
-    <body>
-
-        <h1>Scan from WebCam:</h1>
-        <div>
-            <span id="cam-has-camera"></span>
-            <br>
+    <body class="clearfix">
+        <h1>QR-code</h1>
+        <div class="qr-scanner"> 
             <img src="Images/qr-scanner.png" alt="qr-scanner" id="scanner">
             <video muted playsinline id="qr-video"></video>
         </div>
