--- a/scanner.html
+++ b/scanner.html
@@ -14,9 +14,7 @@
             <video muted playsinline id="qr-video"></video>
         </div>
 
-        <b>Detected QR code: </b>
-        <span id="cam-qr-result">None</span>
-        <br> 
-        
+        <p id="detectedCode">Detected QR code:
+        <span id="cam-qr-result">None</span></p>
     </body>
 </html>
