--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-       <a href="javascript:javascript:history.go(-1)"><img src="../integration-mobile/Images/Cross.png" width="10%" height="10%"></a>
+       <a href="#" id="back-button"><img src="Images/Cross.png" width="10%" height="10%"></a>
         
         <div class="nav">
             <div class="home"><a href="index.html"><h3>Home</h3></a></div>
