--- a/nav.html
+++ b/nav.html
@@ -5,11 +5,13 @@
         <title>Document</title>
         <link rel="stylesheet" href="CSS/nav.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/back-button.js"></script>
 
     </head>
     <body>
-       <a href="#" id="back-button"><img src="Images/Cross.png" width="10%" height="10%"></a>
-        
+        <a href="#" id="back-button"><img src="Images/Cross.png" width="10%" height="10%"></a>
+
         <div class="nav">
             <div class="home"><a href="index.html"><h3>Home</h3></a></div>
             <div class="projecten"><h3>Projecten</h3></div>
