--- a/scanner.html
+++ b/scanner.html
@@ -10,6 +10,7 @@
     </head>
     <body class="clearfix">
         <h1>QR-code</h1>
+        <div class="blackBar"></div>
         <a href="#" id="back-button"><img src="Images/back.png" alt="back button" id="back"></a>
         <div class="qr-scanner"> 
             <img src="Images/qr-scanner.png" alt="qr-scanner" id="scanner">
