--- a/projecten.html
+++ b/projecten.html
@@ -28,15 +28,16 @@
         <input type="submit" value="2de Bachelor" class="bachelorTwee">
         <input type="submit" value="3de Bachelor" class="bachelorDrie">
     </div>
+    
     <div style="text-align:center" class="slideshow-knoppen">
-            <a class="dot" href="#slideOne"></a>
-            <a class="dot" href="#slideTwo"></a>
-            <a class="dot" href="#slideThree"></a>
-            <a class="dot" href="#slideFour"></a>
-            <a class="dot" href="#slideFive"></a>
-            <a class="dot" href="#slideSix"></a>
-            <a class="dot" href="#slideSeven"></a>
-        </div>
+        <a class="dot" href="#slideOne"></a>
+        <a class="dot" href="#slideTwo"></a>
+        <a class="dot" href="#slideThree"></a>
+        <a class="dot" href="#slideFour"></a>
+        <a class="dot" href="#slideFive"></a>
+        <a class="dot" href="#slideSix"></a>
+        <a class="dot" href="#slideSeven"></a>
+    </div>
         
     <div class="slideshow-een">
         <div class="mySlides fade">
@@ -200,7 +201,7 @@
             </div>
         </div>
         <div class="mySlidesTwee">
-            <div id="slideOne">
+            <div id="slideTwo">
                 <div class="numbertext">2 / 4</div>
                 <img src="Images/1.jpg">
                 <div class="usb-on">
@@ -219,7 +220,7 @@
             </div>
         </div>
         <div class="mySlidesTwee">
-            <div id="slideOne">
+            <div id="slideThree">
                 <div class="numbertext">3 / 4</div>
                 <img src="Images/5.jpg">
                 <div class="usb-on">
@@ -238,7 +239,7 @@
             </div>
         </div>
         <div class="mySlidesTwee">
-            <div id="slideOne">
+            <div id="slideFour">
                 <div class="numbertext">4 / 4</div>
                 <img src="Images/7.jpg">
                 <div class="usb-on">
@@ -279,7 +280,7 @@
             </div>
         </div>
         <div class="mySlidesDrie">
-            <div id="slideOne">
+            <div id="slideTwo">
                 <div class="numbertext">2 / 4</div>
                 <img src="Images/5.jpg">
                 <div class="usb-on">
@@ -298,7 +299,7 @@
             </div>
         </div>
         <div class="mySlidesDrie">
-            <div id="slideOne">
+            <div id="slideThree">
                 <div class="numbertext">3 / 4</div>
                 <img src="Images/3.jpg">
                 <div class="usb-on">
@@ -317,7 +318,7 @@
             </div>
         </div>
         <div class="mySlidesDrie">
-            <div id="slideOne">
+            <div id="slideFour">
                 <div class="numbertext">4 / 4</div>
                 <img src="Images/1.jpg">
                 <div class="usb-on">
