--- a/projecten.html
+++ b/projecten.html
@@ -337,7 +337,12 @@
             </div>
         </div>
     </div>
-    
 </body>
+<footer>
+    <a href="https://www.erasmushogeschool.be/nl"><img class="logo" src="Images/Ehb-logowit.png"></a>
+    <a href="https://www.facebook.com/erasmushogeschool"><img src="Images/facebook.svg"></a>
+    <a href="https://twitter.com/ehbrussel?lang=nl"><img src="Images/twitter.svg"></a>
+    <a href="https://www.instagram.com/erasmushogeschool/"><img src="Images/instagram.svg"></a>
+</footer>
 
 </html>
