Footer in Index/contact gezet

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <h2>Programma</h2>
         <p>Onthaal & receptie 18u45 <br> Start show 19u00</p>
     </div>
+    
+<footer>
+    <a href="https://www.erasmushogeschool.be/nl"><img class="logo" src="Images/Ehb-logowit.png"></a>
+    <a href="https://www.facebook.com/erasmushogeschool"><img src="Images/facebook.svg"></a>
+    <a href="https://twitter.com/ehbrussel?lang=nl"><img src="Images/twitter.svg"></a>
+    <a href="https://www.instagram.com/erasmushogeschool/"><img src="Images/instagram.svg"></a>
+</footer>
 
 </body>
 </html>
