--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,38 @@
     <meta charset="UTF-8">
     <title>Contact</title>
     <link rel="stylesheet" href="CSS/contact.css">
+        <link rel="stylesheet" type="text/css" href="CSS/newnav.css" />
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+    <label>
+  <input type='checkbox'>
+  <span class='menu'>
+    <span class='hamburger'></span>
+  </span>
+  <ul>
+    <li>
+      <a href='index.html'>Home</a>
+    </li>
+    <li>
+      <a href='projecten.html'>Projecten</a>
+    </li>
+    <li>
+      <a href='connect.html'>Connect</a>
+    </li>
+        <li>
+      <a href='contact.html'>Contact</a>
+    </li>
+        <li>
+      <a href='scanner.html'>QR-Code Scanner</a>
+    </li>
+  </ul>
+</label>
 
 <body>
     <header>
         <a href="index.html"><img src="Images/LogoFS.png" alt="Logo" width="30%"></a>
-        <a href="nav.html"><img src="Images/Hamburger.png" alt="Hamburger" width="10%" id="menu"></a>
+
     </header>
     <h2>Contact</h2>
     <p class="mail"><a href="mailto:info@ehb.be">info@ehb.be</a> <br> 02 523 37 37</p>
