--- a/index.html
+++ b/index.html
@@ -4,23 +4,48 @@
     <meta charset="UTF-8">
     <title>Final Show</title>
     <link rel="stylesheet" type="text/css" href="CSS/Index.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/newnav.css" />
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 
 </head>
+    <label>
+  <input type='checkbox'>
+  <span class='menu'>
+    <span class='hamburger'></span>
+  </span>
+  <ul>
+    <li>
+      <a href='index.html'>Home</a>
+    </li>
+    <li>
+      <a href='projecten.html'>Projecten</a>
+    </li>
+    <li>
+      <a href='connect.html'>Connect</a>
+    </li>
+        <li>
+      <a href='contact.html'>Contact</a>
+    </li>
+        <li>
+      <a href='scanner.html'>QR-Code Scanner</a>
+    </li>
+  </ul>
+</label>
 
 <body>
     <header>
         <a href="index.html"><img src="Images/LogoFS.png" alt="Logo" width="30%"></a>
-        <a href="nav.html"><img src="Images/Hamburger.png" alt="Hamburger" width="10%" id="menu"></a>
     </header>
+    
+    
     <div class="banner">
         <img src="Images/Home_banner.jpg" alt="Banner" width="100%">
     </div>
     <h3>Inspiratie en innovatie! Ontdek de meest verbluffende projecten en afstudeerwerken van de opleiding Multimedia & Communicatietechnolgoie</h3>
     <h2>Wat u kan verwachten</h2>
     <div class="verwachten">
-        <img src="Images/1.jpg" alt="Banner" width="49%">
-        <img src="Images/2.jpg" alt="Banner" width="49%">
+        <img src="Images/1.jpg" alt="Banner" width="48%">
+        <img src="Images/2.jpg" alt="Banner" width="48%">
     </div>
     <p>We beginnen de avond met korte inspirerende talks van sterke trendsetters: Tanguy De Lestre
         en Taha Riani. Vervolgens zetten we de sterkste
