--- a/projecten.html
+++ b/projecten.html
@@ -7,40 +7,62 @@
         <link rel="stylesheet" type="text/css" href="CSS/Index.css" />
         <link rel="stylesheet" type="text/css" href="CSS/projecten.css">
         <link rel="stylesheet" type="text/css" href="CSS/slide.css">
+        <link rel="stylesheet" type="text/css" href="CSS/newnav.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/projecten.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 
-    </head>
+        <label>
+            <input type='checkbox'>
+            <span class='menu'>
+                <span class='hamburger'></span>
+            </span>
+            <ul>
+                <li>
+                    <a href='index.html'>Home</a>
+                </li>
+                <li>
+                    <a href='projecten.html'>Projecten</a>
+                </li>
+                <li>
+                    <a href='connect.html'>Connect</a>
+                </li>
+                <li>
+                    <a href='contact.html'>Contact</a>
+                </li>
+                <li>
+                    <a href='scanner.html'>QR-Code Scanner</a>
+                </li>
+            </ul>
+        </label>
 
-    <body>
-        <header>
-            <a href="index.html"><img src="Images/LogoFS.png" alt="Logo" width="30%"></a>
-            <a href="nav.html"><img src="Images/Hamburger.png" alt="Hamburger" width="10%" id="menu"></a>
-        </header>
-        <div class="topnav">
-            <img src="Images/loupe.svg">
-            <input type="text" placeholder="Zoeken..">
-        </div>
+        <body>
+            <header>
+                <a href="index.html"><img src="Images/LogoFS.png" alt="Logo" width="30%"></a>
+            </header>
+            <div class="topnav">
+                <img src="Images/loupe.svg">
+                <input type="text" placeholder="Zoeken..">
+            </div>
 
-        <div class="knoppenBachelor">
-            <input type="submit" value="1ste Bachelor" class="bachelorEen">
-            <input type="submit" value="2de Bachelor" class="bachelorTwee">
-            <input type="submit" value="3de Bachelor" class="bachelorDrie">
-        </div>
+            <div class="knoppenBachelor">
+                <input type="submit" value="1ste Bachelor" class="bachelorEen">
+                <input type="submit" value="2de Bachelor" class="bachelorTwee">
+                <input type="submit" value="3de Bachelor" class="bachelorDrie">
+            </div>
 
-        <div style="text-align:center" class="slideshow-knoppen">
-            <a class="dot" href="#slideOne"></a>
-            <a class="dot" href="#slideTwo"></a>
-            <a class="dot" href="#slideThree"></a>
-            <a class="dot" href="#slideFour"></a>
-            <a class="dot" href="#slideFive"></a>
-            <a class="dot" href="#slideSix"></a>
-            <a class="dot" href="#slideSeven"></a>
-        </div>
-        <div class="slideshow-een"></div>
-        <div class="slideshow-twee"></div>
-        <div class="slideshow-drie"></div>
-    </body>
+            <div style="text-align:center" class="slideshow-knoppen">
+                <a class="dot" href="#slideOne"></a>
+                <a class="dot" href="#slideTwo"></a>
+                <a class="dot" href="#slideThree"></a>
+                <a class="dot" href="#slideFour"></a>
+                <a class="dot" href="#slideFive"></a>
+                <a class="dot" href="#slideSix"></a>
+                <a class="dot" href="#slideSeven"></a>
+            </div>
+            <div class="slideshow-een"></div>
+            <div class="slideshow-twee"></div>
+            <div class="slideshow-drie"></div>
+        </body>
 
-</html>
+        </html>
