contact.html omgezet naar .php

--- a/nav.html
+++ b/nav.html
@@ -16,7 +16,7 @@
             <div class="home"><a href="index.html"><h3>Home</h3></a></div>
             <div class="projecten"><a href="projecten.html"><h3>Projecten</h3></a></div>
             <div class="connect"><h3>Connect</h3></div>
-            <div class="contact"><a href="contact.html"><h3>Contact</h3></a></div>
+            <div class="contact"><a href="contact.php"><h3>Contact</h3></a></div>
             <div class="QR"><a href="scanner.html"><h3>QR-Code scanner</h3></a></div>
         </div>
 
