--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href='connect.html'>Connect</a>
     </li>
         <li>
-      <a href='contact.html'>Contact</a>
+      <a href='contact.php'>Contact</a>
     </li>
         <li>
       <a href='scanner.html'>QR-Code Scanner</a>
