.html naar .php

--- a/projecten.html
+++ b/projecten.html
@@ -31,7 +31,7 @@
                 <a href='connect.html'>Connect</a>
             </li>
             <li>
-                <a href='contact.html'>Contact</a>
+                <a href='contact.php'>Contact</a>
             </li>
             <li>
                 <a href='scanner.html'>QR-Code Scanner</a>
