--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href='projecten.html'>Projecten</a>
     </li>
     <li>
-      <a href='connect.php'>Connect</a>
+      <a href='connect.html'>Connect</a>
     </li>
         <li>
       <a href='contact.php'>Contact</a>
