--- a/projecten.html
+++ b/projecten.html
@@ -28,7 +28,7 @@
                 <a href='projecten.html'>Projecten</a>
             </li>
             <li>
-                <a href='connect.php'>Connect</a>
+                <a href='connect.html'>Connect</a>
             </li>
             <li>
                 <a href='contact.php'>Contact</a>
