--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="CSS/Index.css" />
         <link rel="stylesheet" type="text/css" href="CSS/newnav.css" />
         <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/nav.js"></script>
     </head>
     <label>
         <input type='checkbox'>
