--- a/projecten.html
+++ b/projecten.html
@@ -12,6 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
         <script src="js/projecten.js"></script>
+        <script src="js/nav.js"></script>
 
     </head>
 
