Tijd rechts gezet

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="programma">
             <h2>Programma</h2>
-            <p>Onthaal & receptie 18u45 <br> Start show 19u00</p>
+            <p>Onthaal & receptie <span class="time">18u45</span> <br> Start show <span class="time">19u00</span></p>
         </div>
 
         <footer>
