--- a/connect.html
+++ b/connect.html
@@ -5,7 +5,8 @@
         <title>Document</title>
         <link rel="stylesheet" href="CSS/Index.css">
         <link rel="stylesheet" type="text/css" href="CSS/newnav.css" />
-          <link rel='icon' href='Images/ehb%20logo%20glitched.png' type='image/x-icon'/ >
+        <link rel='icon' href='Images/ehb%20logo%20glitched.png' type='image/x-icon'/ >
+        <link rel="stylesheet" href="CSS/connect.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
         <script src="js/cookies.js"> </script>
