kleine dingen toevoegen

--- a/scanner.html
+++ b/scanner.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Document</title>
         <link rel="stylesheet" href="CSS/scanner.css">
+         <link rel='icon' href='Images/ehb%20logo%20glitched.png' type='image/x-icon'/ >
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="module" src="js/scanner.js"></script>
         <script src="js/back-button.js"></script>
