--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>Final Show</title>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
         <link rel="stylesheet" type="text/css" href="CSS/Index.css" />
         <link rel="stylesheet" type="text/css" href="CSS/newnav.css" />
         <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
         <link rel='icon' href='Images/ehb%20logo%20glitched.png' type='image/x-icon'/ >
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js"></script>
+        <script>window.addEventListener("load", function(){
+            window.cookieconsent.initialise({
+            "palette": {
+            "popup": {
+            "background": "#000000"
+            },
+            "button": {
+            "background": "#ff0000"
+            }
+            },
+            "theme": "classic"
+            })
+            });
+            </script>
         <script src="js/nav.js"></script>
     </head>
     <label>
